@@ -7,6 +7,7 @@ Revision history for Perl module Math::Prime::Util
     - random_shawe_taylor_prime              FIPS 186-4 random proven prime
     - random_shawe_taylor_prime_with_cert    as above with certificate
     - twin_prime_count                       counts twin primes in range
+    - twin_prime_count_approx                fast approximation to Pi_2(n)
 
     [FUNCTIONALITY AND PERFORMANCE]
 
